<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_green_grey"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/gradient_background_white_grey">

        <ImageButton
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/app_icon"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/app_icon"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/app_icon"
            android:layout_marginBottom="10dp"
            android:text="@string/app_info"
            android:textSize="9sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_map_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/gradient_background_white_grey"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/map_action_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_map_action" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_toRightOf="@id/map_action_icon"
            android:text="@string/map_action" />

    </RelativeLayout>

</LinearLayout>